[metadata]
name = phat-tails
version = 0.0.3
description = Pareto Hybrids with Asymmetric Tails
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/rskene/phat
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.19.5
    scipy==1.7.0
    scikit-learn==0.24.2
    tensorflow==2.5.0
    numba==0.53.1

[options.packages.find]
where = src

