[metadata]
name = phat-tails
version = 0.0.11
description = Pareto Hybrids with Asymmetric Tails
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/rskene/phat
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.9
install_requires =
    arch==4.19
    matplotlib==3.5.1
    numpy==1.19.5
    numba==0.53.1
    pmdarima==1.8.2
    scipy==1.7.0
    scikit-learn==0.24.2
    statsmodels==0.12.2
    tensorflow==2.5.0
    tensorflow-probability==0.12.2
    tqdm==4.61.2

[options.packages.find]
where = src
